--- a/journal/201905.md
+++ b/journal/201905.md
@@ -7,9 +7,9 @@
 أبرز أحداث شهر ماي:
 
 * تم تفعيل DCP4. أصبحت الشبكة الرئيسية لديكريد جاهزة الآن لضم الشبكة البرقية.
-* دخل الإصدار الأول لنظام محفظة "آي أو إس" الاختبار العام.
+* دخل الإصدار الأول  لمحفظة "آي أو إس" الاختبار العام.
 * تقارب المرحلة الأولى لثلاثة مقترحات تمولها االخزينة (ديتو، البحوث، والمكافأة) من الإنتهاء، حيث تم بالفعل نشر الملخصات والمقترحات لزيادة التمويل لكل من ديتو وبرنامج الأبحاث. كما تم تقديم ما مجموعه 6 مقترحات في شهر ماي، مع فتح 4 اقتراحات للتصويت في أوائل يونيو.
-* اكتمل الانتاج الأولي لكل من Decred Assembly و بودكاست Decred in Depth مع إصدار الحلقات الأولى. يضم فيديو الديكريد elian@، الذي قام في أواخر شهر ماي بتغطية 3 فعاليات خلال 7 أيام في كل من كولومبيا وأوروغواي، وقدم وصفا تفصيليا لتجربته في كل منها.
+* اكتمل الإنتاج الأولي لكل من Decred Assembly و بودكاست Decred in Depth مع إصدار الحلقات الأولى. يضم فيديو الديكريد elian@، الذي قام في أواخر شهر ماي بتغطية 3 فعاليات خلال 7 أيام في كل من كولومبيا وأوروغواي، وقدم وصفا تفصيليا لتجربته في كل منها.
 
 ## التطوير
 
@@ -19,7 +19,7 @@
 
 مجال نشط آخر هو [كود التعدين](https://github.com/decred/dcrd/pulls?q=is%3Apr+updated%3A2019-05-01..2019-05-31+mining) الذي يخضع لسلسلة من تحسينات الكود وتحسين الأداء، على سبيل المثال [لإزالة getblocktemplate](https://github.com/decred/dcrd/pull/1736) و[لطلب](https://github.com/decred/dcrd/pull/1739) عنوان قالب صالح.
 
-تغيير كبير قيد النظر يتعلق بكود التعدين يستحق الإشارة بشكل خاص يخص [إجراء إصلاح شامل](https://github.com/decred/dcrd/pull/1748) لخلفية مولد نموذج المعايرة (الوظيفة التي يستدعيها المعدنين لاستلام نماذج المعايرة لإنشاء كتل منها). في الوقت الحالي، ينتج المعدنين غير الملمين بتعقيدات تصويت الديكريد في بعض الأحيان كتل صالحة تضم الحد الأدنى لثلاث أصوات من أصل 5 لإثبات العمل المسموح به. يعد هذا أمرًا سيئًا بالنسبة للمعدنين، الذين يحصلون على دعم أقل عند إضافة عدد أقل من الأصوات. يعد هذا أيضًا أمرا غير مرغوب فيه بالنسبة لناخبي إثبات الحصة، الذين قد لا يحصلون على مكافأة إثبات الحصة، على الرغم من أنهم صوتوا، وذلك ببساطة بسبب تأخير النشر. لمعالجة هذا، تم تحديث منشئ قالب الخلفية لإضافة دعم أداة نشر الأصوات الذكية، بالإضافة إلى عدد من الميزات الأخرى، مثل المعالجة الأفضل لإعادة تنظيم السلسلة نحو كتل بديلة، وهو اشتراك يوفر للمعدنين مجموعة من تحديثات القوالب، والنظر في حالة التزامن لتحديد ما إذا كانت هذه هي السلسلة المتداولة. كما تجدر الإشارة إلى أن هذا العمل ينفذ البنية الأساسية فقط ولا يعرض هذه الوظيفة بعد في الإنتاج.
+تغيير كبير قيد النظر يتعلق بكود التعدين يستحق الإشارة بشكل خاص يخص [إجراء إصلاح شامل](https://github.com/decred/dcrd/pull/1748) لخلفية مولد نموذج المعايرة (الوظيفة التي يستدعيها المعدنين لاستلام نماذج المعايرة لإنشاء كتل منها). في الوقت الحالي، ينتج المعدنين غير الملمين بتعقيدات تصويت الديكريد في بعض الأحيان كتل صالحة تضم الحد الأدنى لثلاث أصوات من أصل 5 لإثبات العمل المسموح به. يعد هذا أمرًا سيئًا بالنسبة للمعدنين أثبات العمل، حيث يحصلون على مكافأة أقل عند إضافة عدد أقل من الأصوات. يعد هذا أيضًا أمرا غير مرغوب فيه بالنسبة لناخبي إثبات الحصة، الذين قد لا يحصلون على مكافأة إثبات الحصة، على الرغم من أنهم صوتوا، وذلك ببساطة بسبب تأخير النشر. لمعالجة هذا، تم تحديث منشئ قالب الخلفية لإضافة دعم أداة نشر الأصوات الذكية، بالإضافة إلى عدد من الميزات الأخرى، مثل المعالجة الأفضل لإعادة تنظيم السلسلة نحو كتل بديلة، وهو اشتراك يوفر للمعدنين مجموعة من تحديثات القوالب، والنظر في حالة التزامن لتحديد ما إذا كانت هذه هي السلسلة المتداولة. كما تجدر الإشارة إلى أن هذا العمل ينفذ البنية الأساسية فقط ولا يعرض هذه الوظيفة بعد في الإنتاج.
 
 [dcrwallet](https://github.com/decred/dcrwallet): إصلاح العلة، و تحسين [التعامل مع الأخطاء](https://github.com/decred/dcrwallet/pull/1453)، وتبسيط [الكود المتزامن](https://github.com/decred/dcrwallet/pull/1451) وزيادة الاستخدام المتزامن لمحفظة غير مقفلة. وقد بدأ العمل على ميزة [CleanOutAccount](https://github.com/decred/dcrwallet/pull/1419)، التي تشبه SweepAccount ولكنها تسمح بمعاملات متعددة.
 
@@ -27,7 +27,7 @@
 
 [بوليتيا](https://github.com/decred/politeia): تتضمن التغييرات في الواجهة الأمامية عرضًا محسنًا لقائمة المقترحات، تحميلًا مستمرًا للمقترحات أثناء التمرير، وعدم إعادة التوجيه عند انتهاء الدورة ـ كما ستظهر الآن نافذة مشروط لتسجيل الدخول. و شهدت الواجهة الخلفية تحسينات الأداء وإصلاح الأخطاء، وتغييرات في قاعدة بيانات المستخدم (أصبحت بيانات المستخدم المتوقفة مشفرة الآن)، ونقطة نهاية واجهة برمجة تطبيقات المحدثة التي تسمح لغير المشرفين بالبحث عن معرف المستخدم/اسم المستخدم بواسطة المفتاح العمومي. وستتيح هذه البحوث تنظيم البيانات المتعلقة بتعليقات المستخدمين وأصوات المستخدمين بواسطة حساب المستخدم بدلاً من المفتاح العمومي.
 
-لا يزال نظام إدارة المقاول (CMS) يتلقى [عددًا ثابتًا](https://github.com/decred/politeia/pulls?q=is%3Apr+updated%3A2019-05-01..2019-05-31+cms) من التحسينات والإصلاحات.
+لا يزال نظام إدارة المتعاقد (CMS) يتلقى [عددًا ثابتًا](https://github.com/decred/politeia/pulls?q=is%3Apr+updated%3A2019-05-01..2019-05-31+cms) من التحسينات والإصلاحات.
 
 [dcrlnd](https://github.com/decred/dcrlnd): [يستمر](https://github.com/decred/dcrlnd/pulls?q=is%3Apr+updated%3A2019-05-01..2019-05-31) العمل في تجهيز الشبكة البرقية لديكريد الخاصة بالشبكة الرئيسية، مع إصلاح الأخطاء، إدخال تحسينات على اختبارات الإدماج، زيادة تغطية الاختبار، وإزالة الكود غير المستخدم.
 
@@ -37,9 +37,9 @@
 
 [dcrandroid](https://github.com/decred/dcrandroid): تم إصلاح الأخطاء الطفيفة وتحسينات واجهة المستخدم، مع إضافة جديدة [لوظيفة](https://github.com/decred/dcrandroid/pull/371) الإرسال والتقدير. كما تم [تحديث](https://github.com/decred/dcrandroid/pull/356) الكود ليكون متوافقًا مع أحدث إصدار ل [dcrlibwallet](https://github.com/raedahgroup/dcrlibwallet) - مكون مشترك أعيد استخدامه بواسطة dcrandroid و dcrios و [godcr](https://github.com/raedahgroup/godcr).
 
-[dcrios](https://github.com/raedahgroup/dcrios): أصبح إصدار المرشح 1 من محفظة آي أو إس [جاهزا](https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/) للإختبار العام على نطاق أوسع. كما تكثفت جهود التطوير استعدادًا للإطلاق الرسمي. وقد تم إصلاح الأخطاء التي أبلغ عنها مستخدمو تطبيق الاختبار، وتم إجراء تحسينات على واجهة المستخدم، و تنفيذ عملية إعادة بناء كبيرة [لتنظيف](https://github.com/raedahgroup/dcrios/pull/391) المستودع وتحسين تغطية الاختبار. الإصدار على متجر أبل وشيك!
+[dcrios](https://github.com/raedahgroup/dcrios): أصبح إصدار المرشح 1 من محفظة آي أو إس [جاهزا](https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/) للإختبار العام على نطاق أوسع. كما تكثفت جهود التطوير استعدادًا للإطلاق الرسمي. وقد تم إصلاح الأخطاء التي أبلغ عنها مستخدمو تطبيق الاختبار، وتم إجراء تحسينات على واجهة المستخدم، و تنفيذ عملية إعادة بناء كبيرة [لتنظيف](https://github.com/raedahgroup/dcrios/pull/391) المستودع وتحسين تغطية الاختبار. الإصدار على متجر أبل اصبح وشيك!
 
-[dcrdata](https://github.com/decred/dcrdata): تمت إضافة [لوحة معلومات](https://alpha.dcrdata.org/market) الأسواق إلى موقع ألفا مع معظم معلومات السوق ذات الصلة، مثل:سعر وحجم الدولار الأمريكي و BTC من أفضل أسواق الديكريد، ومؤشرات سعر BTC / USD، ومخططات عمق دفتر الطلبات، وحجم وتاريخ السوق.
+[dcrdata](https://github.com/decred/dcrdata): تمت إضافة [لوحة معلومات](https://alpha.dcrdata.org/market) الأسواق إلى موقع ألفا مع معظم معلومات السوق ذات الصلة، مثل:سعر وحجم التداولات بالدولار الأمريكي و BTC من أفضل أسواق الديكريد، ومؤشرات سعر BTC / USD، ومخططات دفتر عمق السوق، وحجم وتاريخ السوق.
 
 [المستندات](https://github.com/decred/dcrdocs): تمت إضافة صفحة [أمان](https://docs.decred.org/advanced/general-security/) جديدة تجسد الكثير من الحكمة حول الحوسبة الآمنة، بما في ذلك إعداد النظام و OPSEC. كما تم تحديث صفحة [تفاصيل المعاملة](https://docs.decred.org/advanced/transaction-details/) لتشمل مزيدًا من المعلومات حول أنواع المعاملات المحددة لديكريد، بالإضافة إلى [مثال تفصيلي للمعاملة](https://github.com/decred/dcrdocs/pull/937). وتحتوي صفحة [أرشيف التصويت بالإجماع](https://docs.decred.org/governance/consensus-rule-voting/consensus-vote-archive/) الآن على تدفق أفضل مع المزيد من البيانات.
 
@@ -56,7 +56,7 @@
 
 مرحبًا بالمساهمين لأول مرة مع دمج الكود في الفروع الرئيسية: duyenemdo (على [dcrandroid](https://github.com/decred/dcrandroid/commits?author=duyenemdo))، njirap (على [dcrdata](https://github.com/decred/dcrdata/commits?author=njirap))، Nelson Dornelas Jr (على [politeiagui](https://github.com/decred/politeiagui/commits?author=dornelasN)) و Youssef Boukenken (على [dcrtime](https://github.com/decred/dcrtime/commits?author=sefbkn)).
 
-## الإدارة
+## الإدارة و الحوكمة
 
 في ماي، تلقت الخزنة 15،616 DCR وأنفقت  8،456 DCR. باستخدام معدل المتوسط اليومي لشهر ماي ب DCR/USD والذي يقدر ب 27.71 دولارًا، ستكون الخزينة قد تلقت 433 ألف دولارا وأنفقت 234 ألف دولارا. ونظرًا لأن هذه المدفوعات كانت مخصصة للعمل الذي تم إنجازه في شهر أبريل، فإنه من المفيد أيضًا أخذها بعين الاعتبار في سياق متوسط السعر اليومي لشهر أبريل البالغ 24.22 دولار - وفي هذه الحالة ستبلغ الأرقام المستلمة/المنفقة بالدولار 378 ألف دولار /205 ألف دولار. اعتبارًا من 1 يونيو، بلغ رصيد الخزينة  613،840 DCR ( أي ما يعادل 17.3 مليون دولار أمريكي بقيمة 28.19 دولارًا أمريكيًا).
 
@@ -70,7 +70,7 @@
 
 * [مقترح البحث المفتوح المصدر لديكريد: المرحلة الثانية](https://proposals.decred.org/proposals/67de0e901143400ae2f247391c4d5028719ffea8308fbc5854745ad859fb993f) بواسطة richard-red@، اقتراح لمواصلة تمويل برنامج البحوث بمبلغ 20،000 دولار، ويقدر أن يستمر لمدة 6 أشهر. يتضمن الاقتراح تقريرا عن أنشطة الأشهر الستة الأولى، ووصفا لكيفية اختلاف النهج للمضي قدما. كما يدعو الاقتراح أيضا إلى إدراج أفكار بشأن مشاريع البحوث في التعاليق.
 
-* [وثيقة مواصفات التبادل اللامركزي](https://proposals.decred.org/proposals/a4f2a91c8589b2e5a955798d6c0f4f77f2eec13b62063c5f4102c21913dcaf32) بواسطة jy-p@، اقتراح للمضي قدما في منصة التبادل اللامركزي DEX عن طريق إنتاج "مواصفات كاملة بأسلوب RFC" للعمليات المعنية. سيتم إكمال المواصفات بواسطة الشركة زيرو التي تعمل معchappjc@ و buck54321@ و jholdstock@، بتكلفة تصل إلى 20،000 دولار.
+* [وثيقة مواصفات منصةالتبادل اللامركزية](https://proposals.decred.org/proposals/a4f2a91c8589b2e5a955798d6c0f4f77f2eec13b62063c5f4102c21913dcaf32) بواسطة jy-p@، اقتراح للمضي قدما في منصة التبادل اللامركزي DEX عن طريق إنتاج "مواصفات كاملة بأسلوب RFC" للعمليات المعنية. سيتم إكمال المواصفات بواسطة الشركة زيرو التي تعمل معchappjc@ و buck54321@ و jholdstock@، بتكلفة تصل إلى 20،000 دولار.
 
 * [تحفيز BD Evangelists ضمن النظام البيئي لديكريد](https://proposals.decred.org/proposals/cb446a469987d6603d93f442ef0d4e45bacbea47a72b5ce89f9c3cac3868d627) بواسطة betterfuture@، اقتراح لإنشاء فريق لتطوير الأعمال "Decred Evangelists" يقوم بترتيب صفقات التطوير المشتركة مع المنظمات الشريكة، ويتم مكافأته بنسبة مئوية من أي DCR ساهم بها هؤلاء الشركاء في الخزانة. تم تعديل الاقتراح بواسطة betterfuture@ في 31 ماي قائلا أنه سيقوم بالتخلي عنه وإعادة تقديمه كاقتراحين منفصلين، استنادًا إلى تعليقات المجتمع.
 
@@ -268,7 +268,7 @@
 
 [أحرق](https://www.reddit.com/r/eos/comments/bm75ih/the_mainnet_34m_eos_accumulated_4_inflation_is/) منتجو كتلة إيوس 34 مليون عملة إيوس ( ما يقارب 272 مليون دولار) من حساب  eosio.saving. تراكمت هذه الأموال من التضخم البالغ 4٪ والذي كان سيتم استخدامه لتمويل تطوير المشاريع من خلال [نظام اقتراح العمال](https://medium.com/eosys/eos-worker-proposal-system-announcement-6addcfb0134c). تراجعت هذه الفكرة عن التنفيذ من منتجي كتلة إيوس والمجتمع، ودعم 15 منتج كتلة إيوس اقتراح حرق المدخرات المتراكمة [في 8 ماي](https://www.eosx.io/tx/26ca16319febafc0942a8c6e3be26c16b84846b7cfe5f6ade906a0b86a6c2bb7?listView=actions). لا تزال التوكنات الجديدة تتراكم في حساب التوفير، ولكن يبدو أنه من المحتمل إزالتها نظرًا لوجود [استفتاء](https://eosauthority.com/polls_details?proposal=inflation_20190307&prev=search) مفتوح لإزالة التضخم بنسبة 4٪ للتطوير، والذي يتمتع بدعم إجماعي تقريبًا بتصويت 2.7 ٪ من توكنات إيوس.
 
-[علق](https://forum.zcashcommunity.com/t/the-future-of-zcash-in-the-year-2020/32372/173) زوكو على نقاش طويل بشأن مستقبل تطوير زدكاش للإعراب عن الدعم لصندوق التطوير الجديد. تخصص زدكاش حاليا 20٪ من مكافآت الكتلة لمكافأة المؤسسين، ولكن من المقرر أن ينتهي هذا في عام 2020. يعتقد زوكو والعديد من المدافعين الآخرين أن صندوق التطوير الجديد يحتاج إلى أن يكون أكثر لامركزية من اعتماد مكافأة المؤسسين من العملات الإلكترونية للشركة، ويشجعون أعضاء المجتمع على تقديم وتطوير خطط للحكم اللامركزي لهذا الصندوق.
+[علق](https://forum.zcashcommunity.com/t/the-future-of-zcash-in-the-year-2020/32372/173) زوكو على نقاش طويل بشأن مستقبل تطوير زيكاش للإعراب عن الدعم لصندوق التطوير الجديد. تخصص زيكاش حاليا 20٪ من مكافآت الكتلة لمكافأة المؤسسين، ولكن من المقرر أن ينتهي هذا في عام 2020. يعتقد زوكو والعديد من المدافعين الآخرين أن صندوق التطوير الجديد يحتاج إلى أن يكون أكثر لامركزية من اعتماد مكافأة المؤسسين من العملات الإلكترونية للشركة، ويشجعون أعضاء المجتمع على تقديم وتطوير خطط للحكم اللامركزي لهذا الصندوق.
 
 تم [تفعيل](https://www.coindesk.com/in-first-tezos-blockchain-activates-upgrade-by-token-holder-voting) تحديث Tezos Athens في 30 مايو، مما يشير إلى نهاية العملية التي بدأت في فبراير لاختيار اقتراح، وإقراره، واختباره وتفعيله. أحد الجوانب الأقل مناقشة من تحديث البروتوكول كان [توليد](https://twitter.com/wisercharlie/status/1134240285238501376)  100 XTZ الجديدة التي سيطالب بها مطورو التحديث خلال من المشروبات. وقد تم وصف هذا بأنه وسيلة لتمويل التطوير من خلال التضخم في المستقبل، مع المطورين الذين يقدمون اقتراحًا لتغيير البروتوكول يتضمن جيل XTZ الجديد الذي يمكنهم المطالبة به كمكافأة على عملهم.
 
