--- a/journal/201905.md
+++ b/journal/201905.md
@@ -307,3 +307,5 @@
 * صورة العنوان: saender
 
 النسخة الأصلية لمجلة الديكريد لشهر ماي متوفرة على هذا الرابط [هنا](https://medium.com/decred/decred-journal-may-2019-62166706ee37).
+
+تمت الترجمة إلى اللغة العربية بواسطة: arij@. قام بالمراجعة abdulrahman4@.
