--- a/journal/201906.md
+++ b/journal/201906.md
@@ -8,13 +8,13 @@ _الصورة "الشذوذ" بواسطة saender@_
 
 أبرز أحداث شهر يونيو:
 
-* الموافقة على ميزانية العلاقات العامة لديتو على منصة بوليتيا، برنامج مكافأة إيجاد العلة، البحث المفتوح المصدر، مواصفات منصة التبادل اللامركزي، والتغيير في إجماع التزامات كتلة الترويسة، مما يعزز أمن النظام البسيط للتحقق من الدفع SPV ويمهد الطريق لإدخال تحسينات أخرى.
+* الموافقة على ميزانية العلاقات العامة لديتو على منصة بوليتيا، برنامج مكافأة إيجاد العلة، البحث المفتوح المصدر، مواصفات منصة التبادل اللامركزي، والتغيير في إجماع التزامات صديرة الكتلة ، مما يعزز أمن النظام البسيط للتحقق من الدفع SPV ويمهد الطريق لإدخال تحسينات أخرى.
 
 * أصدرت النسخة 1.0.0 لمحفظة الديكريد لنظام "آي أو إس" على متجر أبل في 10 يوليوز.
 
-* أصدرت النسخة 5.0 ل dcrdata، مع إدخال مخططات جديدة و وتصوير بياني لاستكشاف البيانات المحسنة، والتحسينات في الأداء والأمان والهندسة المعمارية.
+* أصدرت النسخة 5.0 ل dcrdata، مع إضافة رسوم بيانية جديدة و مؤثرات بصرية لاستكشاف بيانات ديكريد، والتحسينات في الأداء والأمان والبنية.
 
-* تجربة أكثر سلاسة للمتعاقدين عند تقديم الفواتير، مع إصلاح الأخطاء وتحسين واجهة المستخدم في نظام إدارة المقاول (CMS) - و يمثل هذا مرحلة هامة لبدء تنفيذ عملية تخليص متعاقدي الديكريد (DCC) وإعداد التقارير المالية.
+* تجربة أكثر سلاسة للمتعاقدين عند تقديم الفواتير، مع إصلاح الأخطاء وتحسين واجهة المستخدم في نظام إدارة المتعاقد (CMS) - و يمثل هذا مرحلة هامة لبدء تنفيذ عملية تخليص متعاقدي الديكريد (DCC) وإعداد التقارير المالية.
 
 * شهد هذا الشهر ظهور بعض البودكاستات البارزة وزيادة في ذكر ديكريد في المقالات ووسائل التواصل الاجتماعي. وقد إكتسب تحدي الديكريد DecredChallenge# بعض الزخم، ويشجع الناس على النظر في الديكريد، وفهمها، ومناقشة ما إذا كانت تستحق مكانا أكثر بروزا في فضاء العملات الرقمية.
 
@@ -26,15 +26,15 @@ _الصورة "الشذوذ" بواسطة saender@_
 
 تم [دمج](https://github.com/decred/dcrd/pull/1748) اصلاح منشئ قالب الخلفية الذي تم تغطيته في [عدد ماي](201905.md).
 
-يتم القيام بهذه التحديثات الكبيرة للكود بعناية فائقة. أولاً، يتم تقديم إصدار وحدة نمطية جديدة، ثم يتم تحديث الوحدات النمطية بالتبعية تدريجياً لاستخدام النسخة الجديدة. وفي جميع الأوقات، يجب أن يبني كل شيء ويجتاز جميع الاختبارات، ويجب على كل إيداع قابلا للمراجعة إلى أقصى حد ممكن.
+يتم القيام بهذه التحديثات الكبيرة للكود بعناية فائقة. أولاً، يتم تقديم إصدار وحدة نمطية جديدة، ثم يتم تحديث الوحدات النمطية بالتبعية تدريجياً لاستخدام النسخة الجديدة. وفي جميع الأوقات، يجب أن يبني كل شيء ويجتاز جميع الاختبارات، ويجب على كل إيداع مراجعته  إلى أقصى حد ممكن.
 
-ومن بين التحسينات الأصغر الأخرى، تمت [إضافة](https://github.com/decred/dcrd/pull/1757) الدعم لإنشاء شهادات Ed25519 TLS على Go 1.13.
+ومن بين التحسينات الأخرى الأصغر، تمت [إضافة](https://github.com/decred/dcrd/pull/1757) الدعم لإنشاء شهادات Ed25519 TLS على Go 1.13.
 
 [dcrwallet](https://github.com/decred/dcrwallet): إصلاح الأخطاء وإدخال تحسينات تدريجية.
 
 تم تغيير [منحنى TLS](https://github.com/decred/dcrwallet/pull/1468) الافتراضي إلى P-256 أكثر أمانًا. كما تمت إضافة الدعم وتمكينه لشهادات TLS ل[Ed25519](https://github.com/decred/dcrwallet/pull/1477) افتراضيًا على Go 1.13.
 
-تم تحسين التعامل مع التذاكر عن طريق إضافة علم [`ticketbuyer.limit`](https://github.com/decred/dcrwallet/pull/1476) للتقليل من الحد الأقصى الذي يمكن شراؤه من التذاكر لكل كتلة و[حساب رصيد](https://github.com/decred/dcrwallet/pull/1330) `lockedbytickets` الذي تم تصحيحه لمعالجة العديد من المشكلات المتعلقة بسولو، ومزود خدمة التصويت والمنتخبين بالتذاكر. سيسمح [إصلاح RPC](https://github.com/decred/dcrwallet/pull/1478) لمقدمي خدمات التصويت بإظهار [التذاكر غير الناضجة](https://github.com/decred/dcrstakepool/pull/404) بشكل منفصل. كما تمت إضافة العديد من [واجهات برمجة التطبيقات لعنوان المحفظة](https://github.com/decred/dcrwallet/pull/1474) الجديدة لتبسيط عملية تطوير الميزات المتعلقة بالعنوان.
+تم تحسين التعامل مع التذاكر عن طريق إضافة علم [`ticketbuyer.limit`](https://github.com/decred/dcrwallet/pull/1476) للتقليل من الحد الأقصى الذي يمكن شراؤه من التذاكر لكل كتلة و[حساب رصيد](https://github.com/decred/dcrwallet/pull/1330) `lockedbytickets` الذي تم تصحيحه لمعالجة العديد من المشكلات المتعلقة بالمنتخبين الفرديين او عن طريق مزودِي خدمة التصويت او عن طريق اقتسام التذكرة. سيسمح [إصلاح RPC](https://github.com/decred/dcrwallet/pull/1478) لمقدمي خدمات التصويت بإظهار [التذاكر غير الناضجة](https://github.com/decred/dcrstakepool/pull/404) بشكل منفصل. كما تمت إضافة العديد من [واجهات برمجة التطبيقات لعنوان المحفظة](https://github.com/decred/dcrwallet/pull/1474) الجديدة لتبسيط عملية تطوير الميزات المتعلقة بالعنوان.
 
 العمل [جار](https://github.com/decred/dcrwallet/pull/1471) للسماح باستيراد حساب xpub العشوائي. ستعمل هذه الميزة على تحسين [الخصوصية](https://github.com/decredcommunity/issues/issues/25) من خلال السماح لمشتري التذاكر التلقائي باستخلاص عناوين تصويت فريدة، وتجنب إعادة استخدام العنوان.
 
@@ -52,11 +52,11 @@ _الصورة "الشذوذ" بواسطة saender@_
 
 أحرز تقدم ملحوظ في تشغيل العديد من مثيل بوليتيا [في وقت واحد](https://github.com/decred/politeia/issues/665)، مما يجعل خيار [البريد الإلكتروني](https://github.com/decred/politeia/issues/860) والإبلاغ العام على النفقات إختياري.
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): حصل برنامج مزود خدمة التصويت VSP على مزيد من الإعجاب في الأشهر الأخيرة. بعد [إعادة التصميم](https://github.com/decred/dcrstakepool/pull/339) في مايو، كان هناك الكثير من أعمال إعادة البناء لتحقيق [فصل مناسب للطبقات](https://github.com/decred/dcrstakepool/issues/227) بين المكونات التي ستحصل أيضًا على مكافأة صغيرة للأمان والأداء.
+[dcrstakepool](https://github.com/decred/dcrstakepool): حصل برنامج مزود خدمة التصويت VSP على مزيد من الإهتمام في الأشهر الأخيرة. بعد [إعادة التصميم](https://github.com/decred/dcrstakepool/pull/339) في مايو، كان هناك الكثير من أعمال إعادة البناء لتحقيق [فصل مناسب للطبقات](https://github.com/decred/dcrstakepool/issues/227) بين المكونات التي ستحصل أيضًا على زيادة صغيرة في الأمان والأداء.
 
 [dcrlnd](https://github.com/decred/dcrlnd): يستمر العمل في نقل [التغييرات الأولية](https://github.com/decred/dcrlnd/pull/36) من مستودع [lnd](https://github.com/lightningnetwork/lnd). وقد تم دمج ما يقرب من 190 (من 270) من طلبات السحب التي تم دمجها في lnd منذ تفرع dcrlnd، بما في ذلك العديد من إصلاحات الأخطاء والميزتين المهمتين: النسخ الاحتياطي الآمن للبيانات خارج السلسلة وعملاء برج المراقبة لحماية الاختراق و المكافأة.
 
-وردا على سؤال حول مقايضات btc-dcr في الشبكة البرقية، [أوضح](https://www.reddit.com/r/decred/comments/c17xxh/is_it_possible_to_exchange_btclightning_for/ere1skv/) matheusd@ حالة العناصر المتعددة للغز.
+وردا على سؤال حول مبادلات btc-dcr في الشبكة البرقية، [أوضح](https://www.reddit.com/r/decred/comments/c17xxh/is_it_possible_to_exchange_btclightning_for/ere1skv/) matheusd@ حالة العناصر المتعددة للغز.
 
 [dcrandroid](https://github.com/decred/dcrandroid): إصلاحات الأخطاء الطفيفة وتحسينات واجهة المستخدم والترجمات الجديدة [بالإسبانية](https://github.com/decred/dcrandroid/pull/363) و[البرتغالية (BR)](https://github.com/decred/dcrandroid/pull/367) و[وظيفة](https://github.com/decred/dcrandroid/pull/371) الإرسال والتقدير الجديدة.
 
@@ -68,7 +68,7 @@ _الصورة "الشذوذ" بواسطة saender@_
 
 [dcrdata](https://github.com/decred/dcrdata): إصدار رئيسي، النسخة 5.0 فعالة الآن. بالإضافة إلى التحسينات في البنية والأمان والأداء، تقدم النسخة 5.0 عددًا من المخططات المرئية والتصورات الجديدة لاستكشاف البيانات المحظورة.
 
-تعرض صفحة [سوق](https://explorer.dcrdata.org/market?chart=depth&xc=aggregated&bin=1h&stack=1) جديدة البيانات من العديد من منصات التبادل، بما في ذلك موجزات أسعار DCR المجمعة ودفتر عمق السوق ومخططات الشموع، و غيرها. خرجت صفحة [الاقتراحات](https://explorer.dcrdata.org/proposals) من المرحلة التجريبيّة، وهي تعرض الإحصائيات ومخططات التصويت (في الوقت الفعلي والتاريخي) لجميع مقترحات بوليتيا. ويبين الرسم البياني [للأصوات المفوتة](https://explorer.dcrdata.org/charts?chart=missed-votes) مؤشرا هاما عن صحة الشبكة.
+ صفحة [سوق](https://explorer.dcrdata.org/market?chart=depth&xc=aggregated&bin=1h&stack=1) جديدة تعرض البيانات من العديد من منصات التبادل الرئيسية، بما في ذلك موجزات أسعار DCR المجمعة ودفتر عمق السوق ومخططات الشموع، و غيرها. خرجت صفحة [الاقتراحات](https://explorer.dcrdata.org/proposals) من المرحلة التجريبيّة، وهي تعرض الإحصائيات ومخططات التصويت (في الوقت الفعلي والتاريخي) لجميع مقترحات بوليتيا. ويبين الرسم البياني [للأصوات المفوتة](https://explorer.dcrdata.org/charts?chart=missed-votes) مؤشرا هاما عن صحة الشبكة.
 
 تتضمن التحسينات في الهيكلة تحديثا ل [PostgreSQL](https://github.com/decred/dcrdata/commit/676e2ae2381e900854c2fe664a92d39a122d6ed7) (تمت إزالة الوضع البسيط)، وتحسين مخطط قاعدة البيانات، و[إعادة تجهيز](https://github.com/decred/dcrdata/commit/856d0466c82338dd1aaec2945ab189da3c4ab060) أنابيب تجزئة الإشعارات ل dcrd، والدعم التجريبي لـ [CockroachDB](https://github.com/decred/dcrdata/commit/3ddc034e672c84313fae789c558ead139ad39f8a)، و[الإعداد المسبق للكتلة](https://github.com/decred/dcrdata/commit/5ceb56b5c8e1ed53b6b92b5deee6e2a05903f61f) تلقائيا، وإصدار نسخة جديدة من نموذج pubsub مع الاشتراك بالعنوان.
 
@@ -76,7 +76,7 @@ _الصورة "الشذوذ" بواسطة saender@_
 
 للحصول على قائمة كاملة بالتغييرات، راجع [ملاحظات الإصدار](https://github.com/decred/dcrdata/releases/tag/release-v5.0.0).
 
-[المستندات](https://github.com/decred/dcrdocs): [استعيض](https://github.com/decred/dcrdocs/pull/958) عن عبارة "DAE" (كيان مستقل موزع) بعبارة "DAO" (منظمة مستقلة موزعة). وتضيف صفحة جديدة تفاصيل عن الكيفية التي تستخدم بها [الخوارزمية](https://github.com/decred/dcrdocs/pull/963) لاختيار تذاكر التصويت.
+[المستندات](https://github.com/decred/dcrdocs): [استعيض](https://github.com/decred/dcrdocs/pull/958) عن عبارة "DAE" (كيان مستقل لامركزي) بعبارة "DAO" (منظمة مستقلة لامركزية). وتضيف صفحة جديدة تفاصيل عن الكيفية التي تستخدم بها [الخوارزمية](https://github.com/decred/dcrdocs/pull/963) لاختيار تذاكر التصويت.
 
 مسائل أخرى:
 
@@ -109,8 +109,8 @@ _الصورة "الشذوذ" بواسطة saender@_
 * [مقترح مكافأة إيجاد العلة لديكريد: المرحلة 2](https://proposals.decred.org/proposals/073694ed82d34b2bfff51e35220e8052ad4060899b23bc25791a9383375cae70) - تمت الموافقة عليه بنسبة بلغت 93.5٪، وقد بلغت نسبة مشاركة الناخبين 31.5٪.
 * [مقترح ديتو للإتصالات لديكريد: المرحلة 2](https://proposals.decred.org/proposals/52ea110ea061c72d3b31ed2f5635720b212ce5e3eaddf868d60f53a3d18b8c04) - تمت الموافقة عليه بنسبة بلغت 75.8٪، وقد بلغت نسبة مشاركة الناخبين 29.2٪.
 * [مقترح البحث المفتوح المصدر لديكريد: المرحلة 2](https://proposals.decred.org/proposals/67de0e901143400ae2f247391c4d5028719ffea8308fbc5854745ad859fb993f) - تمت الموافقة عليه بنسبة بلغت 90.2٪، وقد بلغت نسبة مشاركة الناخبين 32.4٪.
-* [وثيقة مواصفات التبادل اللامركزي](https://proposals.decred.org/proposals/a4f2a91c8589b2e5a955798d6c0f4f77f2eec13b62063c5f4102c21913dcaf32) - تمت الموافقة عليه بنسبة بلغت 98.4٪، وقد بلغت نسبة مشاركة الناخبين 30٪.
-* [تغيير إجماع التزامات كتلة الرأس](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58) - تمت الموافقة عليه بنسبة بلغت 99.2٪، وقد بلغت نسبة مشاركة الناخبين 33.5٪. أعرب المعلقون في الاقتراح و [على ريديت](https://www.reddit.com/r/decred/comments/buv18c/block_header_commitments_consensus_change_proposal/) عن تقديرهم للطريقة التي يتضمن بها الاقتراح قسما لكل من الجماهير التقنية وغير التقنية، ولاحظوا أيضًا كيف تسمح أنظمة التصويت على السلسلة في الديكريد بتحديثات أنيقة دون أخذ سنوات من المناقشات غير المثمرة.
+* [وثيقة مواصفات منصةالتبادل اللامركزي](https://proposals.decred.org/proposals/a4f2a91c8589b2e5a955798d6c0f4f77f2eec13b62063c5f4102c21913dcaf32) - تمت الموافقة عليه بنسبة بلغت 98.4٪، وقد بلغت نسبة مشاركة الناخبين 30٪.
+* [تغيير إجماع التزامات صديرة الكتلة](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58) - تمت الموافقة عليه بنسبة بلغت 99.2٪، وقد بلغت نسبة مشاركة الناخبين 33.5٪. أعرب المعلقون في الاقتراح و [على ريديت](https://www.reddit.com/r/decred/comments/buv18c/block_header_commitments_consensus_change_proposal/) عن تقديرهم للطريقة التي يتضمن بها الاقتراح قسما لكل من الجماهير التقنية وغير التقنية، ولاحظوا أيضًا كيف تسمح أنظمة التصويت على السلسلة في الديكريد بتحديثات أنيقة دون أخذ سنوات من المناقشات غير المثمرة.
 
 تم نشر اقتراحين جديدين:
 
@@ -123,7 +123,7 @@ _الصورة "الشذوذ" بواسطة saender@_
 
 بعد [الأسئلة](https://www.reddit.com/r/decred/comments/bx00fu/so_about_the_exmo_exchange/) على ريديت، نشرت Exmo [تحديثا](https://twitter.com/Exmo_Com/status/1138020825137930240) قصيرا و قامت [بإدراج](https://exmo.com/en/news_view?id=2776) DCR في 18 يونيو.
 
-سعت عدد من المشاركات على r/decred subreddit إلى استقصاء مجتمع الديكريد حول [الحد الأمثل لموافقة بوليتيا](https://www.reddit.com/r/decred/comments/bynidz/poll_optimal_politeia_pass_threshold/)، و[إعادة تسمية ديكريديتون ب Declaration](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/)، [ملقبا ديكريديتون بشيء آخر غير المحفظة](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/)، والسؤال عما إذا كان يجب على الديكريد البدء في استخدام [منظمة غير مركزية مستقلة DAO بدلاً من الكيان المستقل الموزع DAE](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/) لوصف حوكمة أصحاب المصلحة اللامركزية للمشروع.
+سعت عدد من المشاركات على r/decred subreddit إلى استقصاء مجتمع الديكريد حول [الحد الأمثل لموافقة بوليتيا](https://www.reddit.com/r/decred/comments/bynidz/poll_optimal_politeia_pass_threshold/)، و[إعادة تسمية ديكريديتون ب Declaration](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/)، [ملقبا ديكريديتون بشيء آخر غير المحفظة](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/)، والسؤال عما إذا كان يجب على الديكريد البدء في استخدام [منظمة لا مركزية مستقلة DAO بدلاً من الكيان المستقل اللامركزي DAE](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/) لوصف حوكمة أصحاب المصلحة اللامركزية للمشروع.
 
 يمكن اعتبار الاستطلاع الأخير (لإعادة تسمية الكيان المستقل اللامركزي بالمنظمة المستقلة اللامركزية) "مقترحا بسيطًا" بواسطة s\_ben@. والمبرر وراء هذا الاقتراح هو أنه في حين أن اسم DAE (الكيان الموزع المستقل)  قد اختير أصلاً لتجنب الارتباط مع [اختراق المنظمة المستقلة اللامركزية DAO](https://www.google.com/search?q=ethereum+dao+hack) للإيثيريوم، أصبحت المنظمات المستقلة اللامركزية موضوعًا ساخنًا في مجال العملات الرقمية، مع إرتباطها في خيال الناس باختراق المنظمة اللامركزية المستقلة DAO. ولأنه يمكن القول أن الديكريد لديه شرعية أكبر للمطالبة بهذا المصطلح من المشاريع الأخرى،  بعد أن قامت بالفعل بإنشاء منظمة مستقلة لا مركزية "DAO" تعمل (والتي تصدر هذه المجلة)، فمن المنطقي أن تكون جزءًا من المحادثة. وقد تم النظر في وضع اقتراح على بوليتيا. ومع ذلك، لم تكن هناك اعتراضات على التغيير في قنوات التواصل المختلفة (كما هو موضح في هذا [التعليق](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/er1g4px))، وكان الإجماع الخام هو أنه، باستثناء أي معارضة قوية، لم يتطلب هذا التغيير اقتراحا على بوليتيا. قام s\_ben@ بتغيير المراجع في [المستندات](https://docs.decred.org/governance/politeia/overview/#decentralized-autonomous-organization-dao) وقدم [طلب سحب](https://github.com/decred/dcrweb/pull/681) لتغيير المصطلح على decred.org. يتم تعقب نشاط ومناقشات هذه الخطوة في [هذه المسألة](https://github.com/decredcommunity/issues/issues/134).
 
@@ -236,7 +236,7 @@ _الصورة "الشذوذ" بواسطة saender@_
 * لماذا اسم الديكريد رائع بواسطة Haon@ ([على medium](https://medium.com/decred/why-the-name-decred-is-awesome-9627ae9b4e2))
 * حواجز الطرق أمام اعتماد العملة الرقمية في إفريقيا بواسطة GeorgePro@ (على [medium](https://medium.com/@aappiahpro1/the-roadblocks-to-cryptocurrency-adoption-in-africa-3be2c656ec07))
 * ديكريد أستراليا - بناء مجتمع الديكريد لبنة بلبنة بواسطة zohand@ (على [medium](https://medium.com/@sahand.bagheri/decred-australia-building-a-community-brick-by-brick-89928041687e))
-* التحصيص ليس مجرد وسيلة لكسب مال العملات الرقمية - ولا ينبغي أن يكون بواسطة jy-p@ (على [coindesk.com](https://www.coindesk.com/staking-isnt-just-a-way-to-earn-crypto-money-and-it-shouldnt-be)) - متوفر أيضا [باللغة الكورية](https://www.coindeskkorea.com/staking/).
+* التحصيص ليس مجرد وسيلة لكسب مال من العملات الرقمية - ولا ينبغي أن يكون بواسطة jy-p@ (على [coindesk.com](https://www.coindesk.com/staking-isnt-just-a-way-to-earn-crypto-money-and-it-shouldnt-be)) - متوفر أيضا [باللغة الكورية](https://www.coindeskkorea.com/staking/).
 * معلومات داخلية عن الديكريد بواسطة منصة التبادل EliteX (على [medium](https://medium.com/@elitexexchange/the-lowdown-on-decred-dcr-2a36520079f5)) - أجرت منصة التبادل EliteX مقابلة مع changhugo@ وكتبت لمحة موجزة قاموا بنشرها في نفس الوقت الذي تم فيه إدراج DCR.
 * العملة الرقمية: الهوية الخاطئة بواسطة nnnko56@ (على [write.as](https://write.as/nnnko56/cryptocurrency-a-mistaken-identity)) - تعتبر هذه المقالة العملات الرقمية أكثر مما يوحي به ذلك الإسم، وتدعو إلى فهم أوسع لهذه المشاريع على أنها تحتوي على مكونات اجتماعية مهمة، أو "مجتمعات العملات الرقمية".
 
